@@ -11,6 +11,8 @@ Version 1.8.5
        formatting after clicking a link. (Stefan)
 - BUG: Issue #603: TortoiseBlame: Blue wavy
        lines in C header files. (Sup Yut Sum)
+- BUG: Issue #607: TortoiseMerge fails to restore
+       Unicode characters. (Stefan)
 
 Version 1.8.4
 - BUG: Issue 584: Revert from log dialog bottom pane
